...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/lostfound_create_title_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="17.5dp"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lostfound_create_phone_num_ediitext" />

                <EditText
                    android:id="@+id/lostfound_create_content_ediitext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="18.5dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="17.5dp"
...
